--- a/client/app/(main)/c/[chan_id]/write/components/section.css
+++ b/client/app/(main)/c/[chan_id]/write/components/section.css
@@ -1,5 +1,10 @@
-/* write section 용도 */
+/* write section 용도. 스크롤 바로 동작! */
 .ql-container.ql-snow {
   border-style: none !important; /* 기본적으로 있는 border 지정. */
   font-size: 18px; /* 기본 폰트 사이즈 지정 */
+  height: 400px;
 }
+
+/* .ql-editor .ql-blank {
+  height: 400px;
+} */
