refactor[client]: React-quill의 스크롤 관련 설정 수정
- scrollingContainer 등의 옵션 없이도 스크롤 영역 지정 가능.
  - ql-container의 높이 지정, .ql-editor 글자 크기를 css로 지정하도록 수정
  - 필수가 아닌 옵션 제거 및 툴바 컴포넌트 제거

--- a/client/app/(main)/c/[chan_id]/write/components/section.css
+++ b/client/app/(main)/c/[chan_id]/write/components/section.css
@@ -1,10 +1,9 @@
 /* write section 용도. 스크롤 바로 동작! */
 .ql-container.ql-snow {
   border-style: none !important; /* 기본적으로 있는 border 지정. */
-  font-size: 18px; /* 기본 폰트 사이즈 지정 */
   height: 400px;
 }
 
-/* .ql-editor .ql-blank {
-  height: 400px;
-} */
+.ql-editor {
+  font-size: 16px; /* 기본 폰트 사이즈 지정 */
+}
